fixed boldness issue on safari
clearly defined the font weight for each element to avoid
over-thickening in safari

--- a/assets/css/3-modules/_about.sass
+++ b/assets/css/3-modules/_about.sass
@@ -30,6 +30,7 @@
 .faceTag
   font-family: 'Open Sans', sans-serif
   font-style: italic
+  font-weight: lighter
   color: white
   text-align: center
   margin-top: 15px
