--- a/assets/css/3-modules/_footer.sass
+++ b/assets/css/3-modules/_footer.sass
@@ -36,6 +36,7 @@
 
   .quote
     float: left
+    font-weight: lighter
     margin-bottom: 0
     @media screen and (max-width: 723px)
       display: none
@@ -48,6 +49,7 @@
 
 .footnote
   font-family: 'Roboto', sans-serif
+  font-weight: lighter
   color: #707070
   margin: auto
   font-size: 16px
