--- a/assets/css/3-modules/skills.sass
+++ b/assets/css/3-modules/skills.sass
@@ -14,6 +14,8 @@
   margin-top: 3%
   display: flex
   justify-content: center
+  font-family: 'Roboto', sans-serif
+  font-weight: lighter
 
 .skillsTitle
   font-family: 'Roboto', sans-serif
@@ -75,6 +77,7 @@
 .skillsCodeHeader
   font-family: 'Roboto', sans-serif
   font-size: 45px
+  font-weight: lighter
   margin-bottom: 0
   color: #252525
 
